# Nexus-ai

./: README.md  vercel.json
backend/: .gitignore  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/api/routes/: chat.py  memory.py  pdf.py  resume.py  search.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  memory_service.py  rag_service.py  resume_service.py  search_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ModelSelector.jsx
frontend/src/components/chat/: ChatInput.jsx  MessageBubble.jsx  TypingIndicator.jsx
frontend/src/components/landing/: AISearchShowcase.jsx  About.jsx  DocumentIntelligence.jsx  FAQAccordion.jsx  FeaturesGrid.jsx  FinalCTA.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  ImageUnderstanding.jsx  LiveAIDemo.jsx  MultiModelComparison.jsx  Navbar.jsx  PricingMatrix.jsx  ResumeATS.jsx  Testimonials.jsx  ThreeBackground.jsx  TrustMarquee.jsx  UseCases.jsx  VoiceAIDemo.jsx
frontend/src/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/src/components/pdf/: PdfChat.jsx  PdfUpload.jsx
frontend/src/components/resume/: AtsScoreRing.jsx
frontend/src/components/ui/: NexusLogo.jsx
frontend/src/components/voice/: VoiceButton.jsx
frontend/src/hooks/: useResumeStream.js  useStream.js
frontend/src/lib/: supabase.js  utils.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  ForgotPassword.jsx  LandingPage.jsx  Login.jsx  PdfChat.jsx  Resume.jsx  Search.jsx  Settings.jsx  UpdatePassword.jsx  Voice.jsx
frontend/src/store/: authStore.js  chatStore.js  landingStore.js  pdfStore.js  resumeStore.js
