[project]
name = "nexus-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
"fastapi==0.110.0",
"uvicorn==0.28.0",
"starlette==0.36.3",
"pydantic==2.6.4",
"pydantic-settings==2.2.1",
"python-dotenv==1.1.0",
"httpx==0.28.1",
"requests==2.31.0",
"aiohttp==3.9.3",
"openai==1.70.0",
"langchain==0.2.0",
"langchain-community==0.2.0",
"langchain-huggingface>=0.0.3",
"sentence-transformers>=2.7.0",
"transformers>=4.40.0",
"chromadb",
"langchain-text-splitters",
"pypdf",
"python-docx==1.1.0",
"python-multipart==0.0.9",
"reportlab==4.1.0",
"lxml==6.1.1",
"spacy==3.8.7",
"python-dateutil==2.9.0.post0",
"typing_extensions==4.12.2",
"tqdm==4.67.1"
]
