[project]
name = "nexus-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
"fastapi==0.110.0",
"uvicorn==0.28.0",
"starlette==0.36.3",

```
"pydantic==2.6.4",
"pydantic-settings==2.2.1",
"python-dotenv==1.1.0",

"httpx==0.28.1",
"requests==2.31.0",
"aiohttp==3.9.3",

"openai==1.70.0",

"langchain==0.2.0",
"langchain-community==0.2.0",

"python-docx==1.1.0",
"python-multipart==0.0.9",
"reportlab==4.1.0",
"lxml==6.1.1",

"scikit-learn>=1.4.0",

"python-dateutil==2.9.0.post0",
"typing_extensions==4.12.2",
"annotated-types==0.7.0",
"anyio==4.9.0",
"sniffio==1.3.1",
"click==8.1.7",
"certifi==2024.8.30",
"charset-normalizer==3.4.0",
"idna==3.10",
"urllib3==2.2.3",
"packaging==24.1",
"six==1.16.0",
"tqdm==4.67.1"
```

]
